Removing product that is already saved on reservation makes no sense and ends in exception. Product now has flag whetever it is removed or not. + Removing swagger from project as it is no longer supported